...
            <objects>
                <viewController storyboardIdentifier="ActionItemFilterViewController" id="HTC-HX-Nfg" customClass="NotificationFilterViewController" customModule="SWSApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="2RG-1S-Sr6">
                        <rect key="frame" x="0.0" y="0.0" width="285" height="748"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="DTg-YY-VDq">
                                <rect key="frame" x="30" y="40" width="225" height="56"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <color key="barTintColor" red="0.61960784310000006" green="0.61960784310000006" blue="0.61960784310000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="done"/>
                                <connections>
                                    <outlet property="delegate" destination="HTC-HX-Nfg" id="Z07-T0-1jY"/>
...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nmf-di-Dey">
                                <rect key="frame" x="0.0" y="617" width="283" height="69"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jHu-1l-x4M">
                                        <rect key="frame" x="30" y="14" width="76" height="40"/>
                                        <color key="backgroundColor" red="0.89525987689999997" green="0.89525987689999997" blue="0.89525987689999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="clearButton"/>
                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="16"/>
                                        <state key="normal" title="Clear">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
                                            <constraint firstAttribute="height" constant="20" id="T2p-sf-pE6"/>
                                        </constraints>
                                    </view>
                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3N0-vd-kGr">
                                        <rect key="frame" x="128" y="14" width="130" height="40"/>
                                        <color key="backgroundColor" red="0.25882352939999997" green="0.52941176469999995" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="submitButton"/>
                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="16"/>
                                        <state key="normal" title="Submit">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
